# algebra

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: main.yml  publish-to-test-pypi.yml  python-publish.yml  test.yml
algebra/: __init__.py  components-test.py  components.py
algebra/test/: __init__.py  comp.py
