[metadata]
name = algebra.py
version = 1.4.0
author_email = pybots743@gmail.com
description = A simple python package for algebraic calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chouettevan/algebra
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
